tests/errors/sem.unknown-field.struct-constant-access.or
main :: () -> void {
    foo_t :: struct {
        X :: 10;
    };

    foo_t.Y;
};
